--- a/install_apache.yml
+++ b/install_apache.yml
@@ -4,22 +4,22 @@
   become: true
   tasks: 
 
-  - name: install apache and php packages for ubuntu and debian
+  - name: install apache and php for ubuntu and debian
     apt: 
       name: 
         - apache2
         - libapache2-mod-php
+      state: latest
       update_cache: yes
-      state: latest 
     when: ansible_distribution in ["Ubuntu", "Debian"]
 
-  - name: install apache and php packages for redhat
+  - name: install apache and php for redhat
     dnf:
       name: 
         - httpd
         - php
-      update_cache: yes
       state: latest
+      update_cache: yes
     when: ansible_distribution == "RedHat"
 
 
