--- a/site.yml
+++ b/site.yml
@@ -50,6 +50,15 @@
       update_cache: yes
     when: ansible_distribution == "RedHat"
 
+  - name: copy default html file to server
+    tags: apache,apache2,httpd
+    copy:
+      src: default_site.html
+      dest: /var/www/html/index.html
+      owner: root
+      group: root
+      mode: 0644 
+
 
 - hosts: db_servers
   become: true
