--- a/roles/web_servers/tasks/main.yml
+++ b/roles/web_servers/tasks/main.yml
@@ -1,47 +1,28 @@
 
-- name: install apache and php for Ubuntu servers
-  tags: apache,apache2,ubuntu
-  apt:
-    name:
-      - apache2
-      - libapache2-mod-php
+- name: install apache and php packages
+  tags: apache,httpd,php
+  package:
+    name: 
+      - "{{ apache_package_name }}"
+      - "{{ php_package_name }}"
     state: latest
     update_cache: yes
-  when: ansible_distribution == "Ubuntu"
 
-- name: install apache and php for RedHat servers
-  tags: apache,redhat,httpd
-  dnf:
-    name:
-      - httpd
-      - php
-    state: latest
-    update_cache: yes
-  when: ansible_distribution == "RedHat"
-
-- name: start httpd (RedHat)
-  tags: apache,httpd,redhat
+- name: start and enable apache service
+  tags: apache,httpd
   service:
-    name: httpd
+    name: "{{ apache_service }}"
     state: started
     enabled: yes
-  when: ansible_distribution == "RedHat"
 
 - name: change e-mail address for admin
   tags: apache,redhat,httpd
   lineinfile:
     path: /etc/httpd/conf/httpd.conf
     regexp: '^ServerAdmin'
-    line: ServerAdmin somebody@somewhere.net
+    line: ServerAdmin somebody@somewhere.com
   when: ansible_distribution == "RedHat"
-  register: httpd
-
-- name: restart httpd (RedHat)
-  tags: apache,redhat,httpd
-  service:
-    name: httpd
-    state: restarted
-  when: httpd.changed
+  notify: restart_apache
 
 - name: copy default html file to server
   tags: apache,apache2,httpd
